--- a/voiceter/res/layout/main.xml
+++ b/voiceter/res/layout/main.xml
@@ -17,5 +17,19 @@
         android:layout_height="wrap_content"
         android:text="Stop Rec"
         android:onClick="stopRec" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Play Rec"
+        android:onClick="playRec" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Large Text"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </LinearLayout>
